refine abstraction for store destruction
Signed-off-by: NeatGuyCoding <15627489+NeatGuyCoding@users.noreply.github.com>